2001-12-09  Anders Carlsson  <andersca@gnu.org>

	* applet.c: (panel_applet_add_callback), (setup_an_item),
	(applet_setup_panel_menu), (panel_applet_create_menu):
	Ref/Sink our menu, scale the panel menu icon.
	
	* main.c: (main): Don't respawn if I_LOVE_PANEL_CRACK is set.
	
	* menu.c: (setup_full_menuitem): gtk_widget_show our image.
	
	* panel.c: (drop_urilist): Implement so we can dnd urls to the panel.

Sun Dec 09 03:34:18 2001  George Lebl <jirka@5z.com>

	* Makefile.am, tasklist_icon.[ch], foobar-widget.c, main.c, menu.c,
	  xstuff.c: remove the gwmh and gstc hack stuff and remove them from
	  build and also remove the tasklist_icon.[ch] as well.  We use
	  libwnck now:)

Sun Dec 09 03:25:13 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c, menu-util.[ch]: initial crack at porting the
	  tasklist thing to libwnck, reenable the clock menu thing, use main
	  menu stuff for the "applications" menu so that we can get a KDE
	  and/or distribution submenu and remove some dead code

	* menu.[ch], foobar-widget.c, menu-fentry.h: whack the title flags
	  from things.  Menu titles are long dead

	* applet.c: also launch nautilus for edit menus

Sat Dec 08 23:16:39 2001  George Lebl <jirka@5z.com>

	* menu.[ch], menu-fentry.h, menu-util.c, menu-properties.c,
	  session.c, main.c, gnome-run.c:  Remove favourites menu.  It is
	  useless with the current push towards editable menus.  Also instead
	  of running gedit, run nautilus on programs:/ as a menu editor.

	* panel-widget.c: fix warning.

	* applet.c, foobar-widget.c: use gtk image menu items instead of
	  normal items where appropriate.

Sat Dec 08 11:28:37 2001  George Lebl <jirka@5z.com>

	* gnome-run.c, launcher.c, menu.c, swallow.c:  Use the new desktop
	  item launch api.

2001-12-07  Alex Larsson  <alexl@redhat.com>

	* button-widget.[ch]:
	Draw buttons using gdk-pixbuf instead of libart, should
	be faster and more correct.

	* panel-widget.c (make_background): Take a rowstride arg.